@@ -463,6 +463,7 @@ xref_meta(on_signal(_,_,A),	[A+1]).
 xref_meta(with_mutex(_,A),	[A]).
 xref_meta(assume(G),		[G]).	% library(debug)
 xref_meta(freeze(_, G),		[G]).
+xref_meta(when(C, A),		[C, A]).
 xref_meta(clause(G, _),		[G]).
 xref_meta(clause(G, _, _),	[G]).
 xref_meta(time(G),		[G]).	% development system
