@@ -7,6 +7,9 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: bug in b_setvar/2 when assigning a local-stack hosted variable.
+    David Reitter.
+
   * FIXED: read_term/3 option subterm_position on @receiver?(mode).
 
   * FIXED: assertion failure in b_setval/2 and b_getval/2.  David Reitter.
